RESOLVED FIXED244787
REGRESSION (253628@main): Missing images on bbc.com pages
https://bugs.webkit.org/show_bug.cgi?id=244787
Summary REGRESSION (253628@main): Missing images on bbc.com pages
Simon Fraser (smfr)
Reported 2022-09-04 17:55:44 PDT
With a Safari build at 254076@main I am seeing missing images on many BBC News pages, like <https://www.bbc.com/news/uk-england-london-62786371>. These images have "loading=lazy".
Attachments
Screenrecording (1.95 MB, video/quicktime)
2022-09-05 13:06 PDT, alan
no flags
Test reduction (239 bytes, text/html)
2022-09-05 15:32 PDT, alan
no flags
Patch (6.36 KB, patch)
2022-09-05 18:48 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2022-09-04 17:56:05 PDT
Karl Dubost
Comment 2 2022-09-05 00:16:13 PDT
Does it work if you deactivate "lazy image loading" in experimental. If yes it could be very similar to Bug 237703 I can't reproduce on Safari Version 16.1 (18614.2.1.1.1)
Simon Fraser (smfr)
Comment 3 2022-09-05 10:57:37 PDT
Oddly it still reproduces if I turn off the "Lazy Image Loading" and "Lazy iframe loading" experimental features. I'll try to find the regression point.
Simon Fraser (smfr)
Comment 4 2022-09-05 11:14:18 PDT
autospade says this regressed at https://commits.webkit.org/253628@main
alan
Comment 5 2022-09-05 13:06:03 PDT
Created attachment 462148 [details] Screenrecording Images do show up initially and they disappear after a few seconds.
alan
Comment 6 2022-09-05 14:13:20 PDT
Images end up with 0px height (width: 100%; height: 100%). We are probably missing an integration piece where the out-of-flow renderer's height is computed after the inline layout (sizing the out-of-flow content is not part of the inline layout, only finding its static position is).
alan
Comment 7 2022-09-05 15:32:32 PDT
Created attachment 462152 [details] Test reduction
alan
Comment 8 2022-09-05 15:47:08 PDT
We fail to resolve the percent height when the IFC root is also the containing block for the out-of-flow box (e.g. <div style="position: relative">out-of-flow -> <div style="height: 10%; position: absolute"></div>)
alan
Comment 9 2022-09-05 18:48:31 PDT
EWS
Comment 10 2022-09-05 22:11:08 PDT
Committed 254176@main (fee10597718f): <https://commits.webkit.org/254176@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462154 [details].
Note You need to log in before you can comment on or make changes to this bug.