REGRESSION (253628@main): Missing images on bbc.com pages https://bugs.webkit.org/show_bug.cgi?id=244787 <rdar://problem/99553388>

Reviewed by Simon Fraser.

Out-of-flow boxes are supposed to be laid out by their containing blocks as part of the "positioned block layout phase". Running layout on them too early at layoutModernLines not only produces incorrect size but also makes their needsLayout flag cleared (which means we don't find them "dirty" at the "positioned block layout" phase).

* LayoutTests/fast/block/line-layout/out-of-flow-static-with-precent-height-expected.html: Added.
* LayoutTests/fast/block/line-layout/out-of-flow-static-with-precent-height.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutModernLines):

Canonical link: https://commits.webkit.org/254176@main